famos.us のhtml, js, cssを読み込み

--- a/index.html
+++ b/index.html
@@ -1,63 +1,82 @@
-<div id="output"></div>
-<canvas id="picture"></canvas>
-<script src="leap.js"></script>
-<script>
-var canvas = document.getElementById("picture");
-var width = canvas.width = document.body.clientWidth;
-var height = canvas.height = document.body.clientHeight;
-var ctx = canvas.getContext("2d");
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <title>famo.us</title>
+        <meta name="viewport" content="width=1024, maximum-scale=1, user-scalable=no" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+        
+        <link rel="stylesheet" type="text/css" href="css/famous.css" />
+        <link rel="stylesheet" type="text/css" href="css/app.css" />
+        <script type="text/javascript" src="js/lib/classList.js"></script>
+        <script type="text/javascript" src="js/lib/requestAnimationFrame.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
+    </head>
+    <body>
+        <div id="main" class="container"></div>
+        <div id="overlay" class="container"></div>
 
-ctx.translate(width/2, height/2);
-ctx.save();
+        <canvas id="picture"></canvas>
+        <script src="leap.js"></script>
+        <script>
+        var canvas = document.getElementById("picture");
+        var width = canvas.width = document.body.clientWidth;
+        var height = canvas.height = document.body.clientHeight;
+        var ctx = canvas.getContext("2d");
 
-// listen to Leap Motion
-Leap.loop({enableGestures: true}, function(obj) {
-  if (obj.gestures.length > 0) {
-    obj.gestures.forEach(function(gesture) {
-      //output(gesture);
-    });
-  }
+        ctx.translate(width/2, height/2);
+        ctx.save();
 
-  var width = canvas.width = document.body.clientWidth;
-  var height = canvas.height = document.body.clientHeight;
-  var ctx = canvas.getContext("2d");
+        // listen to Leap Motion
+        Leap.loop({enableGestures: true}, function(obj) {
+          if (obj.gestures.length > 0) {
+            obj.gestures.forEach(function(gesture) {
+              //output(gesture);
+            });
+          }
 
-  ctx.translate(width/2,height/2);
-  ctx.save();
+          var width = canvas.width = document.body.clientWidth;
+          var height = canvas.height = document.body.clientHeight;
+          var ctx = canvas.getContext("2d");
 
-  Leap.loop(function(obj) {
-    if (obj.hands.length < 1) return;
+          ctx.translate(width/2,height/2);
+          ctx.save();
 
-    var x = obj.hands[0].palmNormal.x;
-    var z = obj.hands[0].palmNormal.z;
+          Leap.loop(function(obj) {
+            if (obj.hands.length < 1) return;
 
-    ctx.restore();
-    ctx.fillStyle = "rgba(255,255,255,0.4)";
-    ctx.fillRect(-width/2,-height/2,width,height);
-    ctx.save();
+            var x = obj.hands[0].palmNormal.x;
+            var z = obj.hands[0].palmNormal.z;
 
-    for (var i = 0; i<100; i++) {
-      var saturation = Math.round(Math.abs(90*z));
-      ctx.fillStyle = "hsl(" + i + "," + saturation + "%,40%)";
-      ctx.translate(i,0);
-      ctx.rotate(x*Math.PI/5);
-      ctx.fillRect(0,0,8+i/10,8+i/10);
-    }
-  });
+            ctx.restore();
+            ctx.fillStyle = "rgba(0,0,0,0.4)";
+            ctx.fillRect(-width/2,-height/2,width,height);
+            ctx.save();
 
-});
+            for (var i = 0; i<50; i++) {
+              var saturation = Math.round(Math.abs(90*z));
+              ctx.fillStyle = "hsl(" + i + "," + saturation + "%,40%)";
+              ctx.translate(i,0);
+              ctx.rotate(x*Math.PI/5);
+              ctx.fillRect(0,0,8+i/10,8+i/10);
+            }
+          });
 
-var outputDiv = document.getElementById("output");
-function output(json) {
-  var div = document.createElement("div")
-  div.innerHTML = JSON.stringify(json) + "<br/>";
-  outputDiv.insertBefore(div, outputDiv.firstChild);
-};
+        });
 
-</script>
-<style>
-body {
-  font-size: 10px;
-  font-family: monospace;
-}
-</style>
+        var outputDiv = document.getElementById("output");
+        function output(json) {
+          var div = document.createElement("div")
+          div.innerHTML = JSON.stringify(json) + "<br/>";
+          outputDiv.insertBefore(div, outputDiv.firstChild);
+        };
+
+        </script>
+        <style>
+        body {
+          font-size: 10px;
+          font-family: monospace;
+        }
+        </style>
+    </body>
+</html>
